<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="wrap_content"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Name"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_name"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:editable="true"
        android:focusable="true"
        android:hint="@string/entername"
        android:clickable="true"
        android:singleLine="true"
        android:enabled="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thinkweare"
        android:id="@+id/cb_thinkWeAre"
        android:checked="false"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/et_name"
        android:layout_marginTop="@dimen/widget_vertical_margin"
        android:onClick="onCheckboxClicked"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eyecolor"
        android:id="@+id/tv_eyeColor"
        android:layout_below="@+id/cb_thinkWeAre"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/widget_vertical_margin"/>
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sp_eyeColor"
        android:spinnerMode="dropdown"
        android:layout_below="@+id/tv_eyeColor"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/birthday"
        android:id="@+id/tv_birthday"
        android:layout_below="@+id/sp_eyeColor"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/widget_vertical_margin"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Oct 01, 2015"
        android:id="@+id/tv_calendar"
        android:clickable="true"
        android:focusable="true"
        android:textColor="#000000"
        android:layout_below="@+id/tv_birthday"
        android:layout_alignParentStart="true"
        android:onClick="onShowCalendar"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shirtsize"
        android:id="@+id/tv_shirtsSize"
        android:layout_below="@+id/tv_calendar"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/widget_vertical_margin"/>

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/radioGroup"
        android:layout_below="@+id/tv_shirtsSize"
        android:layout_alignParentEnd="true">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shirtsize_xs"
            android:id="@+id/rb_xs"
            android:checked="false"
            android:singleLine="false"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shirtsize_s"
            android:id="@+id/rb_s"
            android:checked="false"
            android:singleLine="false"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shirtsize_m"
            android:id="@+id/rb_m"
            android:checked="true"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shirtsize_l"
            android:id="@+id/rb_l"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shirtsize_xl"
            android:id="@+id/rb_xl"
            android:checked="false"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shirtsize_xxl"
            android:id="@+id/rb_xxl"
            android:checked="false"
            android:singleLine="false" />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pantsize"
        android:id="@+id/tv_pantSize"
        android:layout_below="@+id/radioGroup"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/seekbar_vertical_margin"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/min_pantsize"
        android:id="@+id/tv_seekPantSize"
        android:layout_marginLeft="@dimen/widget_horizontal_margin"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tv_pantSize"
        android:layout_centerVertical="true"
        android:gravity="center_vertical|right"
        android:linksClickable="true"
        android:width="@dimen/seekbar_text_width" />
    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sb_pantSize"
        android:indeterminate="false"
        android:max="16"
        android:splitTrack="false"
        android:layout_marginLeft="@dimen/seekbar_horizontal_margin"
        android:layout_marginRight="@dimen/seekbar_horizontal_margin"
        android:layout_toEndOf="@+id/tv_seekPantSize"
        android:layout_below="@+id/tv_pantSize"
        android:layout_centerVertical="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shirtsize"
        android:id="@+id/tv_shirtSize"
        android:layout_below="@+id/sb_pantSize"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/seekbar_vertical_margin"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/min_shirtsize"
        android:id="@+id/tv_seekShirtSize"
        android:layout_marginLeft="@dimen/widget_horizontal_margin"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tv_shirtSize"
        android:layout_centerVertical="true"
        android:gravity="center_vertical|right"
        android:width="@dimen/seekbar_text_width"/>
    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sb_shirtSize"
        android:max="12"
        android:indeterminate="false"
        android:layout_marginLeft="@dimen/seekbar_horizontal_margin"
        android:layout_marginRight="@dimen/seekbar_horizontal_margin"
        android:layout_toEndOf="@+id/tv_seekShirtSize"
        android:layout_centerVertical="true"
        android:layout_below="@+id/tv_shirtSize"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shoesize"
        android:id="@+id/tv_shoeSize"
        android:layout_below="@+id/sb_shirtSize"
        android:layout_marginTop="@dimen/seekbar_vertical_margin"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/min_shoesize"
        android:id="@+id/tv_seekShoeSize"
        android:layout_marginLeft="@dimen/widget_horizontal_margin"
        android:layout_below="@+id/tv_shoeSize"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:gravity="center_vertical|right"
        android:width="@dimen/seekbar_text_width"/>
    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sb_shoeSize"
        android:max="12"
        android:indeterminate="false"
        android:layout_marginLeft="@dimen/seekbar_horizontal_margin"
        android:layout_marginRight="@dimen/seekbar_horizontal_margin"
        android:layout_toEndOf="@+id/tv_seekShoeSize"
        android:layout_centerVertical="true"
        android:layout_below="@+id/tv_shoeSize"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/bt_save"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="onSave" />
</RelativeLayout>
